# cookiecutter-kedro

./: README.md
{{cookiecutter.project_name}}/: .gitignore  pyproject.toml
{{cookiecutter.project_name}}/conf/base/: logging.yml
{{cookiecutter.project_name}}/docs/source/: conf.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/: __main__.py  settings.py
